<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Negro" >


    <EditText
        android:id="@+id/editTextTextUsername"
        style="@style/EditTexRounded"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/bt_inrGoogle"

        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="@color/blanco"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/ingresagoogle"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:icon="@drawable/ing_google"
        app:iconSize="18sp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Password"
        style="@style/EditTexRounded"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUsername" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="68dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextUsername"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/icono1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="66dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="496dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icono2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="103dp"
        android:layout_height="114dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/texto_inicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textViewnombreapp"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/nombre_app"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/texto_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/texto_inicial"
        android:layout_width="257dp"
        android:layout_height="49dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/Partesuperior"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttoningresar"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/gris"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/ingresa"
        android:textColor="@color/Negro"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_inrGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recuperarcontrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/recuperarcontraseña"
        android:textColor="@color/azul"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_inrGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttoningresar"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/notienecuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/NotieneCuenta"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/registro"
        android:textColor="@color/azul"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toEndOf="@+id/notienecuenta" />
</androidx.constraintlayout.widget.ConstraintLayout>